[artf496149] Change the copy to clipboard icon in framework pages,Download build name should be shown in Download tooltip - Build List Page,Generate build popup - Build name and Build number should be proper help text,Generate build - skip test should be "Skip Tests" and all label should be plural except Show Debug and check box alignment in all list pages issues fixed.

--- a/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
+++ b/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
@@ -4717,3 +4717,7 @@ a[id='androidSigning']:hover {
 	margin-left: 75px;
 	text-align: justify;
 }
+/** All checkbox list page css**/
+.checkbox_list {
+    width:0.1%;
+}
